tested removal of parallax effect on mobile by removing fixed position

--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,7 @@ h1, h2, h3, h4, h5, h6 {
     height: 490px;
     width: 100%;
     background:url("../images/tool.jpg");
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
